fixed css on mobile

--- a/css/bluebird-jungle.css
+++ b/css/bluebird-jungle.css
@@ -26,9 +26,8 @@
 }
 
 .music-links {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 30px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 .title {
@@ -37,9 +36,10 @@
 }
 
 .music-link {
+    margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .container {
